# garakutas

./: .gitattributes  .gitignore  readme.org  readme.txt
cmd-tools/: javaenv.cmd  sendToCmd.cmd
src/: CMakeLists.txt  makefile
src/CPU100/: CMakeLists.txt  main.c  makefile
src/ExSleep/: CMakeLists.txt  main.c  makefile
src/MegaFile/: CMakeLists.txt  main.c  makefile
src/TVMaker/: CMakeLists.txt  main.c  makefile  test.c
src/UTF8/: UTF8.cpp  UTF8.h
src/YdmPoorLineEmu/: !  $  LineEmu.def  LineEmu.rc  YdmmInst.inf  main.cpp  makefile  resource.h
src/batkey/: CMakeLists.txt  batkey-sample.cmd  main.c  makefile  version
src/crlf/: CMakeLists.txt  main.c  makefile
src/dedup/: CMakeLists.txt  main.c  makefile
src/disrdpcp/: main.c  makefile
src/img2java/: CMakeLists.txt  main.c  makefile
src/lha32/: CMakeLists.txt  main.c  makefile
src/libs/getopt/: 00-README.txt  getopt.def  makefile  test.c
src/pi/: CMakeLists.txt  main.c  makefile
src/tee/: CMakeLists.txt  main.c  makefile
src/weekNumber/: CMakeLists.txt  main.c
src/wlsfonts/: CMakeLists.txt  main.c  makefile
